add menu of cst

--- a/blur-admin-1.2.0/dev-release/index.html
+++ b/blur-admin-1.2.0/dev-release/index.html
@@ -277,6 +277,11 @@
 <script src="app/pages/form/inputs/widgets/switch/SwitchPanelCtrl.js"></script>
 <script src="app/pages/form/inputs/widgets/switch/switch.directive.js"></script>
 <script src="app/pages/form/inputs/widgets/tagsInput/tagsInput.directive.js"></script>
+
+<script src="app/pages/cst/cst.module.js"></script>
+<script src="app/pages/cst/CstPageCtrl.js"></script>
+
+
 <!-- endinject -->
 
 <!-- inject:partials -->
