--- a/jwt-spring-security-angular/src/main/webapp/pages/gps/gps.edit.html
+++ b/jwt-spring-security-angular/src/main/webapp/pages/gps/gps.edit.html
@@ -1,10 +1,15 @@
 <div class="col-md-6 col-md-offset-3">
-    <h2>配置GPS采集仪</h2>
+    <h2 class="text-center">配置GPS采集仪</h2>
     <form name="form" ng-submit="vm.doConfig()" role="form">
         <div class="form-group" ng-class="{ 'has-error': form.id.$dirty && form.id.$error.required }">
-            <label for="id">设备号</label>
+            <label for="id">温度计编号</label>
             <input type="text" name="id" id="id" class="form-control" ng-model="vm.gps.id" required />
-            <span ng-show="form.id.$dirty && form.id.$error.required" class="help-block">设备号不能为空</span>
+            <span ng-show="form.id.$dirty && form.id.$error.required" class="help-block">温度计编号不能为空</span>
+        </div>
+        <div class="form-group" ng-class="{ 'has-error': form.gpsNo.$dirty && form.gpsNo.$error.required }">
+            <label for="id">设备号</label>
+            <input type="text" name="gpsNo" id="gpsNo" class="form-control" ng-model="vm.gps.gpsNo" required />
+            <span ng-show="form.gpsNo.$dirty && form.gpsNo.$error.required" class="help-block">设备号不能为空</span>
         </div>
         <div class="form-group" ng-class="{ 'has-error': form.orderNo.$dirty && form.orderNo.$error.required }">
             <label for="orderNo">订单号</label>
@@ -44,7 +49,7 @@
         </div>
         
         <div class="form-actions">
-            <button type="submit" ng-disabled="form.$invalid || vm.dataLoading" class="btn btn-primary">保存</button>
+            <button type="submit" ng-disabled="form.$invalid || vm.dataLoading" class="btn btn-primary btn-group btn-group-justified">保存</button>
         </div>
     </form>
 </div>
