--- a/jwt-spring-security-angular/src/main/webapp/pages/index1.html
+++ b/jwt-spring-security-angular/src/main/webapp/pages/index1.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
   	<meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>金域达GPS温控</title>
+    <title class="text-center">金域达GPS温控</title>
     <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
     <link href="app-content/app.css" rel="stylesheet" />
 </head>
